# DesktopApp_AlLibrary

./: .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE_COMPLIANCE_REPORT.md  CARD_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CSS_MODULES_EXECUTION_PLAN.md  CSS_MODULES_MIGRATION_COMPLETED.md  CSS_MODULES_MISMATCH_ANALYSIS.md  HOME_PAGE_FIXES_TASKS.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_TASKS.md  IMPLEMENTATION_TASKS_COMPLETED.md  LOADING_PAGE_FIXES_TASKS.md  MILESTONE_2_COMPLETION_SUMMARY.md  MISSING_COMPONENTS_INTERACTIONS_ANALYSIS.md  NEXT_STEPS_ROADMAP.md  OPTIMIZATION_ROADMAP.md  OPTION_1_COMPLETED.md  PHASE3_COMPLETION_PLAN.md  PHASE3_COMPLETION_STRATEGY.md  PHASE3_IMPLEMENTATION_PLAN.md  Project Progress.md  README.md  STRUCTURAL_ALIGNMENT_COMPLETED.md  STRUCTURAL_ALIGNMENT_PLAN.md  THEMING_BACKGROUND_PROMPT.md  URGENT_RESTRUCTURING_STATUS.md  eslint.config.js  how 3517f2f0d92bed2dca1eb87c48d2dbb0e9a47ff0 --stat  index.html  package.json  playwright-windows-only.config.ts  playwright.config.ts  postcss.config.js  recent_history.md  test-linting.js  tsconfig.json  vite.config.ts  (+1 more)
.husky/: README.md  commit-msg  health-check.sh  post-checkout  post-commit  post-merge  pre-commit  pre-commit.cmd  pre-push  prepare-commit-msg
docs/: BUILD.md  E2E_TESTING_STRATEGY.md  I18N_IMPLEMENTATION_SUMMARY.md
playwright-report/: index.html
progress/: Current_Task.md  Implementation_Gaps_Tasks.md  Implementation_Progress_Summary.md  Phase3_Implementation_Plan.md  Project_Progress.md  README.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: placeholder.txt
src-tauri/resources/tor/: README.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  collections.rs  database.rs  documents.rs  mod.rs  p2p.rs  search.rs  security.rs  settings.rs  system.rs  tor.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/database/: connection.rs  migrations.rs  mod.rs  models.rs  operations.rs
src-tauri/src/core/document/: cache.rs  file_operations.rs  mod.rs  storage.rs  type_detection.rs
src-tauri/src/core/p2p/: mod.rs  proxy_socks.rs  tor_manager.rs
src-tauri/src/utils/: error.rs  logging.rs  mod.rs
src-tauri/windows/: hooks.nsh
(+626 files in other folders)
