[package]
name = "desktopapp_allibrary"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktopapp_allibrary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.9", features = [] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.21"
md5 = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
mime_guess = "2.0"

# Streaming and async utilities
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# Security dependencies
reqwest = { version = "0.12", features = ["json"] }
local-ip-address = "0.6"
dns-lookup = "2.0"

# System information
sysinfo = "0.30"
dirs = "5.0"

# Tauri plugins
tauri-plugin-opener = "2.0.0-beta.9"
pdfium-render = { version = "0.8" }
png = "0.17"
rfd = "0.14"
zip = "0.6"
lopdf = "0.32"

# Libp2p & transports (to be used for onion-friendly P2P)
libp2p = { version = "0.53", default-features = false, features = [
  "tcp", "dns", "identify", "kad", "gossipsub", "yamux", "noise", "tls", "websocket", "macros", "request-response"
] }
multiaddr = "0.18"
async-socks5 = "0.6"
bincode = "1.3"
bytes = "1.6"
libp2p-kad = "0.45"
libp2p-request-response = "0.26"
libp2p-dns = "0.41"
libp2p-tcp = { version = "0.41", features = ["tokio"] }
libp2p-websocket = "0.43"
once_cell = "1.18"

